--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <script src="Acertijo.js"></script>
+    <script src="Pista.js"></script>
+    <script src="Pergamino.js"></script>
     <script src="Bala.js"></script>
     <script src="Arma.js"></script>
     <script src="Inventario.js"></script>
